lab1/Test/L1-A-13-12.output
Error Type A at Line 3
Error Type B at Line 5
Error Type A at Line 20
Error Type A at Line 23
Error Type B at Line 39
Error Type A at Line 44
Error Type B at Line 49
Error Type B at Line 63
